--- a/index.html
+++ b/index.html
@@ -179,6 +179,6 @@
                 <H2>KIDS</H2>
             </div>
         </div>
-       <h1>hi bata</h1>
+       <h1>hi bata my name is rohit</h1>
 </body>
 </html>
